k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codeline
  annotations:
    metallb.io/address-pool: k3s-pool
    metallb.universe.tf/address-pool: k3s-pool
    external-dns.alpha.kubernetes.io/hostname: codeline.slowburnin.net
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  selector:
    app.kubernetes.io/name: codeline
  ports:
    - name: telnet
      protocol: TCP
      port: 31337
      targetPort: telnet
